--- a/Feature_Engineering_BookCamp_COVID_19.ipynb
+++ b/Feature_Engineering_BookCamp_COVID_19.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQSFqiIPkLl1HxC+njvlu5",
+      "authorship_tag": "ABX9TyOs9pgzfV7KEkGH+0Yc/IRd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1048,7 +1048,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 448
+          "height": 447
         },
         "id": "nV9_zVjo-Udc",
         "outputId": "8327a698-eb63-4d8d-e169-9f86f3ac5b3d"
@@ -1374,7 +1374,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443
+          "height": 444
         },
         "id": "y1BKQ8xOMKTk",
         "outputId": "953379af-8bd3-43cb-8b6e-796d9ed86fb3"
@@ -2314,7 +2314,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "cO-kkq8GUOjB",
         "outputId": "3cf72fe5-03ae-4097-8986-7e0275418b0f"
@@ -2351,7 +2351,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "zj0iR3ITUg9P",
         "outputId": "b1069950-601c-482b-ecea-a856ddbe3064"
@@ -2405,7 +2405,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 963
+          "height": 957
         },
         "id": "0KrGUod4WQAs",
         "outputId": "35ff46b3-6c40-48df-9c2f-f3e50cd5be17"
@@ -2452,7 +2452,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 981
+          "height": 975
         },
         "id": "VkfcTN2rXTgw",
         "outputId": "3a8a1da8-2827-46ff-d457-5eb4e3987813"
@@ -3298,7 +3298,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "iJ_qkxI6xauR",
         "outputId": "e1e31285-8f43-46c1-a9bb-3a2bfc4c00a2"
@@ -3372,7 +3372,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "nDiCmpeiyuMt",
         "outputId": "a6d8c89d-099e-48fe-926f-66643e771aaa"
@@ -3420,7 +3420,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "rk_fbGi8yvpg",
         "outputId": "b16f1b9d-756d-4b3f-925a-e11404453c4e"
@@ -4362,7 +4362,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
+          "height": 289
         },
         "id": "oa1zzUZq8YrZ",
         "outputId": "8b1e6eb4-eff1-4560-f461-63a98f4602b3"
@@ -4825,7 +4825,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 356
+          "height": 343
         },
         "id": "Sqvaf8n0-Kkg",
         "outputId": "76cdcc81-64a0-4e7a-bc8d-831dc76cb0d8"
@@ -5296,7 +5296,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
+          "height": 289
         },
         "id": "VaYm61I8-hry",
         "outputId": "58cb63b5-f45c-4ece-ff35-698fa24f9e24"
@@ -5810,7 +5810,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 356
+          "height": 343
         },
         "id": "9ls1WjNS_WsI",
         "outputId": "15d3f521-3506-42d4-bbff-1b41c827be7e"
@@ -7019,7 +7019,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
         "id": "Ajw3zYaoNX8S",
         "outputId": "098a2879-c579-409e-9349-f9625a83032f"
@@ -7152,6 +7152,115 @@
       "source": [],
       "metadata": {
         "id": "dNv40o_zOhYq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Summary**  \n",
+        "This script demonstrates **feature engineering techniques** on a **COVID-19 vs. Flu binary classification** dataset (`covid_flu.csv`). The goal is to predict `Diagnosis` (COVID-19 or H1N1/Flu) while systematically comparing different imputation, transformation, encoding, construction, and selection strategies. It uses modular `sklearn` pipelines + `FeatureUnion` to chain separate processing branches for numerical, binary/symptom, and multi-label risk-factor features. The core experiment loop (`simple_grid_search`) measures how different feature engineering choices affect training time, parsing time, and final classification performance (via grid-searched `ExtraTreesClassifier`).\n",
+        "\n",
+        "The notebook follows a classic applied ML workflow: EDA → missing value strategies → numerical/categorical transformations → domain-inspired feature construction → pipeline composition → feature selection → performance comparison.\n",
+        "\n",
+        "### All Steps Involved + Why They Were Done\n",
+        "\n",
+        "1. **Data Loading & Quick Inspection**  \n",
+        "   - Read CSV, `head()`, `isnull().mean()`, `value_counts(normalize=True)`, `info()`.  \n",
+        "   **Why**: Assess class balance (~balanced), missing value severity, and data types.\n",
+        "\n",
+        "2. **EDA & Initial Cleaning**  \n",
+        "   - Convert `Sex` → boolean `Female`.  \n",
+        "   - Replace \"Yes\"/\"No\" → `True`/`False` across symptom/risk columns.  \n",
+        "   - Inspect unique values in multi-value columns like `RiskFactors`.  \n",
+        "   **Why**: Make features binary/logical where appropriate; prepare multi-label parsing later.\n",
+        "\n",
+        "3. **Missing Value Imputation Exploration (Numerical)**  \n",
+        "   - `SimpleImputer`: mean / median / constant (999) / most_frequent.  \n",
+        "   - `EndTailImputer` (gaussian tail — mean + 3×std).  \n",
+        "   **Why**: Compare simple univariate strategies vs. distribution-tail-aware imputation (useful for skewed lab values like `lymphocytes`).\n",
+        "\n",
+        "4. **Missing Value Imputation Exploration (Categorical/Binary)**  \n",
+        "   - Most frequent category.  \n",
+        "   - Constant fill (`False`) — domain logic: absence of mention ≈ not present.  \n",
+        "   **Why**: Symptoms/risk factors are often sparsely recorded; assuming missing = absent is clinically reasonable.\n",
+        "\n",
+        "5. **Numerical Feature Transformations**  \n",
+        "   - Log / log1p → reduce right skew (e.g., `lymphocytes`).  \n",
+        "   - `PowerTransformer(method=\"box-cox\")` → make distributions closer to normal.  \n",
+        "   - `StandardScaler` / `MinMaxScaler`.  \n",
+        "   - `KBinsDiscretizer` (uniform / quantile / kmeans strategies).  \n",
+        "   **Why**: Stabilize variance, satisfy normality assumptions of some models, reduce outlier influence, or create ordinal features for tree-based models.\n",
+        "\n",
+        "6. **Categorical / Multi-label Feature Construction**  \n",
+        "   - Custom `DummifyRiskFactor` transformer:  \n",
+        "     - Split comma-separated `RiskFactors` → list.  \n",
+        "     - `MultiLabelBinarizer` → one-hot per unique risk.  \n",
+        "   - Domain feature: `FluSymptoms` = at least 2 of {Diarrhea, Fever, Coughing, …}.  \n",
+        "   **Why**: Turn free-text-like risk string into usable binary columns; create clinically meaningful composite symptom score.\n",
+        "\n",
+        "7. **Pipeline Architecture & Composition**  \n",
+        "   - Separate `Pipeline`s for:  \n",
+        "     – risk factors (parse → dummify)  \n",
+        "     – binary features (select → fill `False`)  \n",
+        "     – numerical features (select → impute → scale/transform/bin)  \n",
+        "   - Combine via `FeatureUnion`.  \n",
+        "   - Wrap selections/transforms in `FunctionTransformer` for column selection.  \n",
+        "   **Why**: Modular, parallel processing of different feature groups; easy to swap strategies and compare impact.\n",
+        "\n",
+        "8. **Model Evaluation Loop (`simple_grid_search`)**  \n",
+        "   - Grid search over `ExtraTreesClassifier` (depth, n_estimators, criterion).  \n",
+        "   - Time parsing + fitting.  \n",
+        "   - Report classification metrics on test set.  \n",
+        "   **Why**: Quantify how much each feature engineering choice improves (or hurts) predictive performance and runtime.\n",
+        "\n",
+        "9. **Feature Selection Experiments**  \n",
+        "   - `SelectKBest` + `mutual_info_classif` (information theoretic).  \n",
+        "   - `SelectKBest` + `chi2` (statistical dependence for non-negative features).  \n",
+        "   - `SelectFromModel` + tree feature importances.  \n",
+        "   **Why**: Reduce dimensionality (especially after risk-factor one-hot explosion), remove noise, and compare filter vs. embedded selection.\n",
+        "\n",
+        "10. **Visualization Attempts**  \n",
+        "    - `graphviz` diagrams of `FeatureUnion` and nested pipelines.  \n",
+        "    **Why**: Understand and document complex pipeline structure.\n",
+        "\n",
+        "### Packages / Modules / Techniques Used\n",
+        "\n",
+        "| Package / Module                          | Class / Function / Technique                              | Why It Was Used |\n",
+        "|-------------------------------------------|------------------------------------------------------------|-----------------|\n",
+        "| **pandas**                                | `read_csv`, `select_dtypes`, `value_counts`, `replace`, `plot` | Data loading, type-based column selection, quick stats & visualization |\n",
+        "| **numpy**                                 | `log`, `log1p`                                             | Manual log transforms |\n",
+        "| **matplotlib.pyplot**                     | `hist`, `box`, `show`                                      | Distribution & outlier visualization |\n",
+        "| **time**                                  | `time.time()`                                              | Measure preprocessing + training runtime |\n",
+        "| **sklearn.model_selection**               | `train_test_split` (stratified), `GridSearchCV`            | Balanced split; hyperparameter tuning |\n",
+        "| **sklearn.ensemble**                      | `ExtraTreesClassifier`                                     | Fast tree-based model for benchmarking feature engineering |\n",
+        "| **sklearn.metrics**                       | `classification_report`                                    | Detailed precision/recall/F1 per class |\n",
+        "| **sklearn.pipeline**                      | `Pipeline`, `FeatureUnion`                                 | Chain & parallelize feature processing branches |\n",
+        "| **sklearn.compose**                       | `ColumnTransformer` (imported but not heavily used)        | Potential for column-based dispatching (shown in viz attempt) |\n",
+        "| **sklearn.preprocessing**                 | `SimpleImputer`, `StandardScaler`, `MinMaxScaler`, `PowerTransformer`, `KBinsDiscretizer`, `FunctionTransformer`, `MultiLabelBinarizer` | Imputation, scaling, power transforms, binning, column selection wrapper, multi-label encoding |\n",
+        "| **sklearn.feature_selection**             | `SelectKBest` (`mutual_info_classif`, `chi2`), `SelectFromModel` | Filter & embedded feature selection methods |\n",
+        "| **feature_engine**                        | `EndTailImputer`                                           | Gaussian tail imputation (distribution-aware missing value fill) |\n",
+        "| **sklearn.base**                          | `BaseEstimator`, `TransformerMixin`                        | Create custom compatible transformer `DummifyRiskFactor` |\n",
+        "| **graphviz**                              | `Digraph`                                                  | Visualize pipeline / FeatureUnion structure (nice-to-have) |\n",
+        "\n",
+        "**Key Technique Highlights**  \n",
+        "- **FeatureUnion + multiple branch pipelines** — clean way to handle heterogeneous feature types (multi-label text, binary flags, lab numbers).  \n",
+        "- **Custom `DummifyRiskFactor`** — essential for turning comma-separated risk strings into usable features.  \n",
+        "- **Domain feature `FluSymptoms`** — example of high-value, interpretable manual engineering.  \n",
+        "- Systematic A/B testing of imputation + transformation choices via the same grid-search wrapper — shows practical impact on model quality and speed.\n",
+        "\n",
+        "This notebook serves as a solid tutorial on building modular, comparable feature engineering pipelines for tabular healthcare data."
+      ],
+      "metadata": {
+        "id": "yCadYIiA3FH5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G-epr8zD3Fr0"
       },
       "execution_count": null,
       "outputs": []
